# code2schema

./: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  Taskfile.yml  app.doql.less  goal.yaml  index.html  pyproject.toml  report.md  schema.json  viz.html
code2schema/: __init__.py  cli.py
code2schema/analyzer/: __init__.py  cqrs.py  events.py  graph.py
code2schema/codegen/: __init__.py  visualizer.py
code2schema/core/: __init__.py  extractor.py  models.py
docs/: CHANGELOG.md  README.md
docs/examples/api/: advanced.py  basic.py
docs/examples/cli/: basic.sh  semcod.sh
docs/examples/outputs/: report-sample.md  schema-sample.json
project/: README.md  SUMR.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  graph.graphml  index.html  map.json  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
testql-scenarios/: cli.testql.yaml  generated-cli-tests.testql.toon.yaml
tests/: test_code2schema.py
